Use file hash table as the dictionary to store list of files, then link the key of the table to a scope Consequently: - The dictionary will be simulated for flat profile - the old database format will use the simulated dictionary (backward compatibility) - Only one dictionary per experiment is currently supported. If an experiment contains multiple profile sessions then we need to make an update. - The Scope class now contains the file key (which is integer) to access the dictionary.